--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,8 @@ $fa-font-path: "./fonts/fontawesome/webfonts";
 @import "fonts/fontawesome/scss/solid.scss";
 
 @import "styles/_global";
+
+body {
+    background: rgb(10,14,43);
+    background: linear-gradient(90deg, rgba(10,14,43,1) 0%, rgba(4,4,45,1) 0%, rgba(14,49,68,1) 29%, rgba(14,66,103,1) 92%);    
+}
