add trusted by section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="columns is-desktop">
             <div class="column is-half">
-                <div style="padding-top: 150px; padding-bottom: 150px;">
+                <div style="padding-top: 150px; padding-bottom: 50px;">
                     <h1 class="heading">At vero eos et ac
                         cusamus et iusto </h1>
                     <p class="paragraph">
@@ -58,4 +58,22 @@
             </div>
           </div>        
     </div>    
+</div>
+
+<div class="container">
+    <h2 class="has-text-centered is-size-4 has-text-white mb-5">Trusted by: </h2>
+    <div class="columns">
+        <div class="column">
+            <img src="assets/img/image 6.png" class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 7.png"  class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 8.png"  class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 9.png"  class="image"/>
+        </div>
+    </div>
 </div>
