landing page UI 1

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,79 @@
-<p>home works!</p>
+<header>
+    <nav class="navbar container" style="background-color: inherit !important;" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://bulma.io">
+            <div class="logo">
+                <img src="assets/img/logo.png" style="max-height: 3rem;"/>
+            </div>
+            
+          </a>
+      
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+        </div>
+      
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-start"></div>
+      
+          <div class="navbar-end">
+            <div class="navbar-item">
+                <a class="navbar-item" href="#">Home</a>
+                <a class="navbar-item" href="#">About</a>
+                <a class="navbar-item" href="#">Features</a>
+                <a class="navbar-item" href="#">Blog</a>
+                <a class="navbar-item" href="#">Contact</a>
+            </div>
+          </div>
+        </div>
+      </nav>    
+</header>
+
+<div class="hero">
+    <div class="container">
+        <div class="columns is-desktop">
+            <div class="column is-half">
+                <div style="padding-top: 150px; padding-bottom: 50px;">
+                    <h1 class="heading">At vero eos et ac
+                        cusamus et iusto </h1>
+                    <p class="paragraph">
+                        Ut perspiciatis unde omnis iste natus error sit<br/> voluptatem accusantium doloremque.                    
+                    </p>
+                    <div id="subscriberform">
+                        <div class="columns">
+                            <div class="column is-two-thirds">
+                                <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
+                            </div>
+                            <div class="column">
+                                <button class="subscriber-btn">Get Started</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <img src="assets/img/polygen.png" class="image"/>
+            </div>
+          </div>        
+    </div>    
+</div>
+
+<div class="container">
+    <h2 class="has-text-centered is-size-4 has-text-white mb-5">Trusted by: </h2>
+    <div class="columns">
+        <div class="column">
+            <img src="assets/img/image 6.png" class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 7.png"  class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 8.png"  class="image"/>
+        </div>
+        <div class="column">
+            <img src="assets/img/image 9.png"  class="image"/>
+        </div>
+    </div>
+</div>
