--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,64 +1,5 @@
-<header>
-    <nav class="navbar container" style="background-color: inherit !important;" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="https://bulma.io">
-            <div class="logo">
-                <img src="assets/img/logo.png" style="max-height: 3rem;"/>
-            </div>
-            
-          </a>
-      
-          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start"></div>
-      
-          <div class="navbar-end">
-            <div class="navbar-item">
-                <a class="navbar-item" href="#">Home</a>
-                <a class="navbar-item" href="#">About</a>
-                <a class="navbar-item" href="#">Features</a>
-                <a class="navbar-item" href="#">Blog</a>
-                <a class="navbar-item" href="#">Contact</a>
-            </div>
-          </div>
-        </div>
-      </nav>    
-</header>
-
-<div class="hero">
-    <div class="container">
-        <div class="columns is-desktop">
-            <div class="column is-half">
-                <div style="padding-top: 150px; padding-bottom: 50px;">
-                    <h1 class="heading">At vero eos et ac
-                        cusamus et iusto </h1>
-                    <p class="paragraph">
-                        Ut perspiciatis unde omnis iste natus error sit<br/> voluptatem accusantium doloremque.                    
-                    </p>
-                    <div id="subscriberform">
-                        <div class="columns">
-                            <div class="column is-two-thirds">
-                                <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
-                            </div>
-                            <div class="column">
-                                <button class="subscriber-btn">Get Started</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <img src="assets/img/polygen.png" class="image"/>
-            </div>
-          </div>        
-    </div>    
-</div>
+<app-header></app-header>
+<app-hero></app-hero>
 
 <div class="container">
     <h2 class="has-text-centered is-size-4 has-text-white mb-5">Trusted by: </h2>
@@ -77,3 +18,90 @@
         </div>
     </div>
 </div>
+
+<section class="pt-100">
+    <div class="container">
+        <div class="seperator mx-auto"></div>
+        <h2 class="has-text-centered is-size-3 has-text-white mt-3">
+            Excepteur sint occaecat cupidatat non proident
+        </h2>
+        <p class="has-text-centered mt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
+        <p class="has-text-centered mt-3">
+            <a href="#" class="has-text-primary">See more »</a> 
+        </p>
+
+        <div class="columns mt-5">
+            <div class="column">
+                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
+                    <div class="column is-two-fifths">
+                        <img src="assets/img/bitcoin-icon.png" >
+                    </div>
+                   <div class="column">
+                       <div class="mt-4 has-text-white	">
+                            <p>Bitcoint</p>
+                            <p>$53.863,9</p>
+                       </div>
+                   </div>
+                   <div class="column is-one-quarter">
+                        <img src="assets/img/Frame 2163.png" class="mt-3"  height="44.3" width="47.7"/>
+                   </div>
+                </div>                
+            </div>
+            <div class="column">
+                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
+                    <div class="column is-two-fifths">
+                        <img src="assets/img/eth-icon.png">
+                    </div>
+                   <div class="column">
+                       <div class="mt-4 has-text-white	">
+                            <p>Bitcoint</p>
+                            <p>$53.863,9</p>
+                       </div>
+                   </div>
+                   <div class="column is-one-quarter">
+                        <img src="assets/img/Frame 2163.png" class="mt-3"  height="44.3" width="47.7"/>
+                   </div>
+                </div> 
+            </div>
+            <div class="column">
+                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
+                    <div class="column is-two-fifths">
+                        <img src="assets/img/bitcoint.png">
+                    </div>
+                   <div class="column">
+                       <div class="mt-4 has-text-white	">
+                            <p>Bitcoint</p>
+                            <p>$53.863,9</p>
+                       </div>
+                   </div>
+                   <div class="column is-one-quarter">
+                        <img src="assets/img/down-6_43.png" class="mt-3"  height="44.3" width="47.7"/>
+                   </div>
+                </div>                 
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mt-5">
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <img src="assets/img/Group2272.png" class="image"/>
+            </div>
+            <div class="column">
+                <div class="mt-5">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-3 has-text-white mt-2">
+                        quis nostrud exercitation<br/> ullamco laboris nisi ut
+                    </h2>
+                    <p class="mt-4">Sed ut perspiciatis unde omnis<br/> 
+                        iste natus error sit voluptatem accusantium<br/> 
+                        doloremque</p>
+
+                    <p class="mt-3"><a href="#" class="has-text-primary">Learn More »</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
