--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,62 +1,30 @@
-header nav {
-    padding-top: 20px;
-    padding-bottom: 20px;
+.pt-100  {
+    padding-top: 100px;
+}
+.pb-100  {
+    padding-bottom: 100px;
 }
 
-header nav .navbar-item .navbar-item:hover {
-    color: #FFF;
-    background-color: inherit!important;
+#frame2162 {
+    background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);
+    border-radius: 33.8507px;
 }
 
-.hero .heading {    
+.shadow {
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+}
+
+.mx-auto {
+    margin: 0 auto;
+}
+
+.seperator {
+    width: 60px; height: 5px; background: linear-gradient(45deg, #009EF7 0%, #32EF9D 100%);
+}
+
+
+h1, h2 {
     font-family: Touche;
     font-style: normal;
     font-weight: bold;
-    font-size: 60px;   
-    color: #FFFFFF;   
-    line-height: 60px;
-    text-transform: capitalize;
-}
-
-.hero .paragraph {  
-    margin-top: 25px;
-    font-family: Touche;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 28px;
-    /* or 156% */
-    color: #728495;
-}
-
-#subscriberform { 
-    max-width: 700px;
-    margin-top: 30px;
-}
-
-#subscriberform .subscriber-textfield {
-    border: 0.5px solid #222;
-    width: 100%;
-    height: 67px;
-    left: 0px;
-    top: 0px;
-    background: #232645;
-    box-shadow: 0px 30px 55px rgba(39, 77, 113, 0.05);
-    border-radius: 10px;    
-    padding: 20px;
-    color: #728495;
-    line-height: 19px;
-    font-size: 16px;
-}
-
-#subscriberform  .subscriber-btn {
-    background: linear-gradient(45deg, #0BCBBF 0%, #16B2E3 52.35%, #2882D6 100%);
-    border-radius: 14px;
-    padding: 24px 36px;
-    color: #FFF;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 19px;   
-    border: none; 
 }
