--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,9 +26,10 @@
             Excepteur sint occaecat cupidatat non proident
         </h2>
         <p class="has-text-centered mt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
-        <p class="has-text-centered mt-3">
-            <a href="#" class="has-text-primary">See more »</a> 
-        </p>
+      
+        <p class="mt-5 has-text-centered"><a href="#">See more <span class="icon">
+            <i class="fas fa-arrow-right"></i>
+          </span></a></p>        
 
         <div class="columns mt-5">
             <div class="column">
@@ -99,9 +100,91 @@
                         iste natus error sit voluptatem accusantium<br/> 
                         doloremque</p>
 
-                    <p class="mt-3"><a href="#" class="has-text-primary">Learn More »</a></p>
+                        <p class="mt-5"><a href="#">Learn more <span class="icon">
+                            <i class="fas fa-arrow-right"></i>
+                          </span></a></p>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="mt-3">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-two-thirds">
+                <div class="pt-200">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-3 has-text-white mt-2">
+                        quis nostrud exercitation<br/> ullamco laboris nisi ut
+                    </h2>
+                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
+                    <p class="mt-5"><a href="#">Learn more <span class="icon">
+                        <i class="fas fa-arrow-right"></i>
+                      </span></a></p>
+                </div>
+            </div>
+            <div class="column">
+                <img src="assets/img/Graphic.png" class="image"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="mt-3">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-two-thirds">
+                <img src="assets/img/Group-2271.png" class="image"/>
+            </div>
+            <div class="column">
+                <div class="pt-200">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-3 has-text-white mt-2">
+                        quis nostrud exercitation<br/> ullamco laboris nisi ut
+                    </h2>
+                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
+                    <p class="mt-5"><a href="#">Learn more <span class="icon">
+                        <i class="fas fa-arrow-right"></i>
+                      </span></a></p>
+                </div>                
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="mt-5 pb-100">
+    <div class="container">
+        <div class="columns shadow pb-5 pt-5">
+           <div class="column is-offset-2">
+               <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">5000</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Iste natus error sit Sed ut</p>
+               </div>
+           </div>
+           <div class="column">
+                <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">1250</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Ullamco laboris nisi ut</p>      
+                </div>         
+           </div>
+           <div class="column">
+                <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">3000</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Sed ut pers piciatis unde</p>
+                </div>
+           </div>
         </div>
     </div>
 </section>
