desktop page complete

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -188,3 +188,50 @@
         </div>
     </div>
 </section>
+
+<section class="pb-100">
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <div style="margin-top: 200px;">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-4 has-text-white mt-3">Get moon app on your<br/> mobile phone now</h2>
+                    <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem<br/> accusantium doloremque</p>
+                </div>
+                <div class="columns mt-5">
+                    <div class="column">
+                        <img src="assets/img/Google-Play-Badge-US.png" class="image"/>
+                    </div>
+                    <div class="column">
+                        <img src="assets/img/AppStoreBadgeUSBlack.png" class="image"/>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-two-thirds
+
+            ">
+                <img src="assets/img/GraphicDesktop.png" class="image"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="pb-100">
+    <div class="container shadow pt-100 pb-100">
+        <div class="seperator mx-auto mb-5"></div>
+        <h3 class="has-text-centered is-size-3 has-text-white has-text-weight-bold">At vero eos et accusamus et iusto </h3>
+        <p class="has-text-centered">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
+        <div id="subscriberform" class="mx-auto">
+            <div class="columns">
+                <div class="column is-two-thirds">
+                    <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
+                </div>
+                <div class="column">
+                    <button class="subscriber-btn">Get Started</button>
+                </div>
+            </div>
+        </div>        
+    </div>
+</section>
+
+<app-footer></app-footer>
