Landing Page UI update 3

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,9 +26,10 @@
             Excepteur sint occaecat cupidatat non proident
         </h2>
         <p class="has-text-centered mt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
-        <p class="has-text-centered mt-3">
-            <a href="#" class="has-text-primary">See more »</a> 
-        </p>
+      
+        <p class="mt-5 has-text-centered"><a href="#">See more <span class="icon">
+            <i class="fas fa-arrow-right"></i>
+          </span></a></p>        
 
         <div class="columns mt-5">
             <div class="column">
@@ -99,9 +100,138 @@
                         iste natus error sit voluptatem accusantium<br/> 
                         doloremque</p>
 
-                    <p class="mt-3"><a href="#" class="has-text-primary">Learn More »</a></p>
+                        <p class="mt-5"><a href="#">Learn more <span class="icon">
+                            <i class="fas fa-arrow-right"></i>
+                          </span></a></p>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<section class="mt-3">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-two-thirds">
+                <div class="pt-200">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-3 has-text-white mt-2">
+                        quis nostrud exercitation<br/> ullamco laboris nisi ut
+                    </h2>
+                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
+                    <p class="mt-5"><a href="#">Learn more <span class="icon">
+                        <i class="fas fa-arrow-right"></i>
+                      </span></a></p>
+                </div>
+            </div>
+            <div class="column">
+                <img src="assets/img/Graphic.png" class="image"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="mt-3">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-two-thirds">
+                <img src="assets/img/Group-2271.png" class="image"/>
+            </div>
+            <div class="column">
+                <div class="pt-200">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-3 has-text-white mt-2">
+                        quis nostrud exercitation<br/> ullamco laboris nisi ut
+                    </h2>
+                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
+                    <p class="mt-5"><a href="#">Learn more <span class="icon">
+                        <i class="fas fa-arrow-right"></i>
+                      </span></a></p>
+                </div>                
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="mt-5 pb-100">
+    <div class="container">
+        <div class="columns shadow pb-5 pt-5">
+           <div class="column is-offset-2">
+               <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">5000</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Iste natus error sit Sed ut</p>
+               </div>
+           </div>
+           <div class="column">
+                <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">1250</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Ullamco laboris nisi ut</p>      
+                </div>         
+           </div>
+           <div class="column">
+                <div class="has-text-centered">
+                    <h2 class="is-size-2">
+                        <span class="has-text-white">3000</span>
+                        <span class="has-text-primary">+</span>
+                    </h2>
+                    <p>Sed ut pers piciatis unde</p>
+                </div>
+           </div>
+        </div>
+    </div>
+</section>
+
+<section class="pb-100">
+    <div class="container">
+        <div class="columns">
+            <div class="column">
+                <div style="margin-top: 200px;">
+                    <div class="seperator"></div>
+                    <h2 class="is-size-4 has-text-white mt-3">Get moon app on your<br/> mobile phone now</h2>
+                    <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem<br/> accusantium doloremque</p>
+                </div>
+                <div class="columns mt-5">
+                    <div class="column">
+                        <img src="assets/img/Google-Play-Badge-US.png" class="image"/>
+                    </div>
+                    <div class="column">
+                        <img src="assets/img/AppStoreBadgeUSBlack.png" class="image"/>
+                    </div>
+                </div>
+            </div>
+            <div class="column is-two-thirds
+
+            ">
+                <img src="assets/img/GraphicDesktop.png" class="image"/>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="pb-100">
+    <div class="container shadow pt-100 pb-100">
+        <div class="seperator mx-auto mb-5"></div>
+        <h3 class="has-text-centered is-size-3 has-text-white has-text-weight-bold">At vero eos et accusamus et iusto </h3>
+        <p class="has-text-centered">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
+        <div id="subscriberform" class="mx-auto">
+            <div class="columns">
+                <div class="column is-two-thirds">
+                    <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
+                </div>
+                <div class="column">
+                    <button class="subscriber-btn">Get Started</button>
+                </div>
+            </div>
+        </div>        
+    </div>
+</section>
+
+<app-footer></app-footer>
