--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -4,7 +4,7 @@
       <div class="column is-half">
         <div style="padding-top: 150px; padding-bottom: 50px;">
           <h1 class="heading">
-            Send, receive, and invest in crypto all in one place
+            Send, receive, and invest in crypto
           </h1>
           <p class="paragraph">
             Ut perspiciatis unde omnis iste natus error sit<br /> voluptatem accusantium doloremque.
