--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,23 +1,6 @@
 <app-header></app-header>
 <app-hero></app-hero>
-
-<div class="container">
-    <h2 class="has-text-centered is-size-4 has-text-white mb-5">Trusted by: </h2>
-    <div class="columns">
-        <div class="column">
-            <img src="assets/img/image 6.png" class="image"/>
-        </div>
-        <div class="column">
-            <img src="assets/img/image 7.png"  class="image"/>
-        </div>
-        <div class="column">
-            <img src="assets/img/image 8.png"  class="image"/>
-        </div>
-        <div class="column">
-            <img src="assets/img/image 9.png"  class="image"/>
-        </div>
-    </div>
-</div>
+<app-trustedby></app-trustedby>
 
 <section class="pt-100">
     <div class="container">
@@ -31,7 +14,7 @@
             <i class="fas fa-arrow-right"></i>
           </span></a></p>        
 
-        <div class="columns mt-5">
+        <div class="columns is-mobile mt-5">
             <div class="column">
                 <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
                     <div class="column is-two-fifths">
@@ -86,12 +69,12 @@
 
 <section class="mt-5">
     <div class="container">
-        <div class="columns">
-            <div class="column">
+        <div class="columns is-multiline is-mobile">
+            <div class="column is-full-mobile">
                 <img src="assets/img/Group2272.png" class="image"/>
             </div>
             <div class="column">
-                <div class="mt-5">
+                <div class="mt-5 is-horizontal-center-mobile">
                     <div class="seperator"></div>
                     <h2 class="is-size-3 has-text-white mt-2">
                         quis nostrud exercitation<br/> ullamco laboris nisi ut
@@ -100,9 +83,9 @@
                         iste natus error sit voluptatem accusantium<br/> 
                         doloremque</p>
 
-                        <p class="mt-5"><a href="#">Learn more <span class="icon">
-                            <i class="fas fa-arrow-right"></i>
-                          </span></a></p>
+                    <p class="mt-5"><a href="#">Learn more <span class="icon">
+                        <i class="fas fa-arrow-right"></i>
+                        </span></a></p>
                 </div>
             </div>
         </div>
@@ -111,9 +94,9 @@
 
 <section class="mt-3">
     <div class="container">
-        <div class="columns">
-            <div class="column is-two-thirds">
-                <div class="pt-200">
+        <div class="columns is-multiline is-mobile">
+            <div class="column is-two-thirds-desktop is-full-mobile">
+                <div class="mt-5 is-horizontal-center-mobile">
                     <div class="seperator"></div>
                     <h2 class="is-size-3 has-text-white mt-2">
                         quis nostrud exercitation<br/> ullamco laboris nisi ut
@@ -124,7 +107,7 @@
                       </span></a></p>
                 </div>
             </div>
-            <div class="column">
+            <div class="column is-full-mobile is-horizontal-center-mobile">
                 <img src="assets/img/Graphic.png" class="image"/>
             </div>
         </div>
@@ -134,12 +117,12 @@
 
 <section class="mt-3">
     <div class="container">
-        <div class="columns">
-            <div class="column is-two-thirds">
+        <div class="columns is-mobile is-multiline">
+            <div class="column is-two-thirds-desktop is-full-mobile">
                 <img src="assets/img/Group-2271.png" class="image"/>
             </div>
-            <div class="column">
-                <div class="pt-200">
+            <div class="column is-full-mobile is-horizontal-center-mobile">
+                <div class="pt-2">
                     <div class="seperator"></div>
                     <h2 class="is-size-3 has-text-white mt-2">
                         quis nostrud exercitation<br/> ullamco laboris nisi ut
@@ -155,9 +138,9 @@
 </section>
 
 
-<section class="mt-5 pb-100">
+<section class="pb-100">
     <div class="container">
-        <div class="columns shadow pb-5 pt-5">
+        <div class="columns is-mobile shadow pb-5 pt-5">
            <div class="column is-offset-2">
                <div class="has-text-centered">
                     <h2 class="is-size-2">
@@ -189,16 +172,16 @@
     </div>
 </section>
 
-<section class="pb-100">
+<section>
     <div class="container">
-        <div class="columns">
-            <div class="column">
-                <div style="margin-top: 200px;">
+        <div class="columns is-mobile is-multiline is-centered">
+            <div class="column is-full-mobile  is-horizontal-center-mobile">
+                <div>
                     <div class="seperator"></div>
                     <h2 class="is-size-4 has-text-white mt-3">Get moon app on your<br/> mobile phone now</h2>
                     <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem<br/> accusantium doloremque</p>
                 </div>
-                <div class="columns mt-5">
+                <div class="columns mt-5  is-horizontal-center-mobile">
                     <div class="column">
                         <img src="assets/img/Google-Play-Badge-US.png" class="image"/>
                     </div>
@@ -207,7 +190,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column is-two-thirds
+            <div class="column is-full-mobile is-two-thirds-desktop
 
             ">
                 <img src="assets/img/GraphicDesktop.png" class="image"/>
@@ -222,7 +205,7 @@
         <h3 class="has-text-centered is-size-3 has-text-white has-text-weight-bold">At vero eos et accusamus et iusto </h3>
         <p class="has-text-centered">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
         <div id="subscriberform" class="mx-auto">
-            <div class="columns">
+            <div class="columns is-mobile">
                 <div class="column is-two-thirds">
                     <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
                 </div>
