--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <div class="columns">
+        <div class="columns is-mobile">
             <div class="column is-two-fifths">
                 <img src="assets/img/logo.png" class="image"/>
                 <p>4517 Sidney Ave. Blacktown, Sidney 39495</p>
@@ -24,7 +24,7 @@
                 </p>
             </div>
             <div class="column">     
-                <div class="columns">
+                <div class="columns is-mobile">
                     <div class="column">                        
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Company</h3>
