--- a/src/app/shared/components/hero/hero.component.scss
+++ b/src/app/shared/components/hero/hero.component.scss
@@ -19,8 +19,40 @@
     color: #728495;
 }
 
+// #subscriberform { 
+//     max-width: 700px;
+//     margin-top: 30px;
+// }
+
+// #subscriberform .subscriber-textfield {
+//     border: 0.5px solid #222;
+//     width: 100%;
+//     height: 67px;
+//     left: 0px;
+//     top: 0px;
+//     background: #232645;
+//     box-shadow: 0px 30px 55px rgba(39, 77, 113, 0.05);
+//     border-radius: 10px;    
+//     padding: 20px;
+//     color: #728495;
+//     line-height: 19px;
+//     font-size: 16px;
+// }
+
+// #subscriberform  .subscriber-btn {
+//     background: linear-gradient(45deg, #0BCBBF 0%, #16B2E3 52.35%, #2882D6 100%);
+//     border-radius: 14px;
+//     padding: 24px 36px;
+//     color: #FFF;
+//     font-style: normal;
+//     font-weight: bold;
+//     font-size: 16px;
+//     line-height: 19px;   
+//     border: none; 
+// }
+
 #subscriberform { 
-    max-width: 700px;
+    max-width: 500px;
     margin-top: 30px;
 }
 
@@ -42,11 +74,16 @@
 #subscriberform  .subscriber-btn {
     background: linear-gradient(45deg, #0BCBBF 0%, #16B2E3 52.35%, #2882D6 100%);
     border-radius: 14px;
-    padding: 24px 36px;
+    padding: 24px 26px;
     color: #FFF;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
     line-height: 19px;   
     border: none; 
+}
+
+#subscriberform  .subscriber-btn:hover {
+    cursor: pointer;
+    color: #f3f3f3;
 }
