--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,220 +1,9 @@
 <app-header></app-header>
 <app-hero></app-hero>
 <app-trustedby></app-trustedby>
-
-<section class="pt-100">
-    <div class="container">
-        <div class="seperator mx-auto"></div>
-        <h2 class="has-text-centered is-size-3 has-text-white mt-3">
-            Excepteur sint occaecat cupidatat non proident
-        </h2>
-        <p class="has-text-centered mt-3">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
-      
-        <p class="mt-5 has-text-centered"><a href="#">See more <span class="icon">
-            <i class="fas fa-arrow-right"></i>
-          </span></a></p>        
-
-        <div class="columns is-mobile mt-5">
-            <div class="column">
-                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
-                    <div class="column is-two-fifths">
-                        <img src="assets/img/bitcoin-icon.png" >
-                    </div>
-                   <div class="column">
-                       <div class="mt-4 has-text-white	">
-                            <p>Bitcoint</p>
-                            <p>$53.863,9</p>
-                       </div>
-                   </div>
-                   <div class="column is-one-quarter">
-                        <img src="assets/img/Frame 2163.png" class="mt-3"  height="44.3" width="47.7"/>
-                   </div>
-                </div>                
-            </div>
-            <div class="column">
-                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
-                    <div class="column is-two-fifths">
-                        <img src="assets/img/eth-icon.png">
-                    </div>
-                   <div class="column">
-                       <div class="mt-4 has-text-white	">
-                            <p>Bitcoint</p>
-                            <p>$53.863,9</p>
-                       </div>
-                   </div>
-                   <div class="column is-one-quarter">
-                        <img src="assets/img/Frame 2163.png" class="mt-3"  height="44.3" width="47.7"/>
-                   </div>
-                </div> 
-            </div>
-            <div class="column">
-                <div class="columns is-gapless shadow" style="padding: 10px; background: linear-gradient(99.28deg, rgba(18, 30, 60, 0.65) -3.14%, rgba(22, 33, 68, 0.32) 110.32%);">
-                    <div class="column is-two-fifths">
-                        <img src="assets/img/bitcoint.png">
-                    </div>
-                   <div class="column">
-                       <div class="mt-4 has-text-white	">
-                            <p>Bitcoint</p>
-                            <p>$53.863,9</p>
-                       </div>
-                   </div>
-                   <div class="column is-one-quarter">
-                        <img src="assets/img/down-6_43.png" class="mt-3"  height="44.3" width="47.7"/>
-                   </div>
-                </div>                 
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mt-5">
-    <div class="container">
-        <div class="columns is-multiline is-mobile">
-            <div class="column is-full-mobile">
-                <img src="assets/img/Group2272.png" class="image"/>
-            </div>
-            <div class="column">
-                <div class="mt-5 is-horizontal-center-mobile">
-                    <div class="seperator"></div>
-                    <h2 class="is-size-3 has-text-white mt-2">
-                        quis nostrud exercitation<br/> ullamco laboris nisi ut
-                    </h2>
-                    <p class="mt-4">Sed ut perspiciatis unde omnis<br/> 
-                        iste natus error sit voluptatem accusantium<br/> 
-                        doloremque</p>
-
-                    <p class="mt-5"><a href="#">Learn more <span class="icon">
-                        <i class="fas fa-arrow-right"></i>
-                        </span></a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="mt-3">
-    <div class="container">
-        <div class="columns is-multiline is-mobile">
-            <div class="column is-two-thirds-desktop is-full-mobile">
-                <div class="mt-5 is-horizontal-center-mobile">
-                    <div class="seperator"></div>
-                    <h2 class="is-size-3 has-text-white mt-2">
-                        quis nostrud exercitation<br/> ullamco laboris nisi ut
-                    </h2>
-                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
-                    <p class="mt-5"><a href="#">Learn more <span class="icon">
-                        <i class="fas fa-arrow-right"></i>
-                      </span></a></p>
-                </div>
-            </div>
-            <div class="column is-full-mobile is-horizontal-center-mobile">
-                <img src="assets/img/Graphic.png" class="image"/>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="mt-3">
-    <div class="container">
-        <div class="columns is-mobile is-multiline">
-            <div class="column is-two-thirds-desktop is-full-mobile">
-                <img src="assets/img/Group-2271.png" class="image"/>
-            </div>
-            <div class="column is-full-mobile is-horizontal-center-mobile">
-                <div class="pt-2">
-                    <div class="seperator"></div>
-                    <h2 class="is-size-3 has-text-white mt-2">
-                        quis nostrud exercitation<br/> ullamco laboris nisi ut
-                    </h2>
-                    <p class="mt-3">Sed ut perspiciatis unde omnis iste natus error sit <br/> voluptatem accusantium doloremque</p>
-                    <p class="mt-5"><a href="#">Learn more <span class="icon">
-                        <i class="fas fa-arrow-right"></i>
-                      </span></a></p>
-                </div>                
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<section class="pb-100">
-    <div class="container">
-        <div class="columns is-mobile shadow pb-5 pt-5">
-           <div class="column is-offset-2">
-               <div class="has-text-centered">
-                    <h2 class="is-size-2">
-                        <span class="has-text-white">5000</span>
-                        <span class="has-text-primary">+</span>
-                    </h2>
-                    <p>Iste natus error sit Sed ut</p>
-               </div>
-           </div>
-           <div class="column">
-                <div class="has-text-centered">
-                    <h2 class="is-size-2">
-                        <span class="has-text-white">1250</span>
-                        <span class="has-text-primary">+</span>
-                    </h2>
-                    <p>Ullamco laboris nisi ut</p>      
-                </div>         
-           </div>
-           <div class="column">
-                <div class="has-text-centered">
-                    <h2 class="is-size-2">
-                        <span class="has-text-white">3000</span>
-                        <span class="has-text-primary">+</span>
-                    </h2>
-                    <p>Sed ut pers piciatis unde</p>
-                </div>
-           </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="container">
-        <div class="columns is-mobile is-multiline is-centered">
-            <div class="column is-full-mobile  is-horizontal-center-mobile">
-                <div>
-                    <div class="seperator"></div>
-                    <h2 class="is-size-4 has-text-white mt-3">Get moon app on your<br/> mobile phone now</h2>
-                    <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem<br/> accusantium doloremque</p>
-                </div>
-                <div class="columns mt-5  is-horizontal-center-mobile">
-                    <div class="column">
-                        <img src="assets/img/Google-Play-Badge-US.png" class="image"/>
-                    </div>
-                    <div class="column">
-                        <img src="assets/img/AppStoreBadgeUSBlack.png" class="image"/>
-                    </div>
-                </div>
-            </div>
-            <div class="column is-full-mobile is-two-thirds-desktop
-
-            ">
-                <img src="assets/img/GraphicDesktop.png" class="image"/>
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="pb-100">
-    <div class="container shadow pt-100 pb-100">
-        <div class="seperator mx-auto mb-5"></div>
-        <h3 class="has-text-centered is-size-3 has-text-white has-text-weight-bold">At vero eos et accusamus et iusto </h3>
-        <p class="has-text-centered">Sed ut perspiciatis unde omnis iste natus error sit voluptatem<br/> accusantium doloremque</p>
-        <div id="subscriberform" class="mx-auto">
-            <div class="columns is-mobile">
-                <div class="column is-two-thirds">
-                    <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
-                </div>
-                <div class="column">
-                    <button class="subscriber-btn">Get Started</button>
-                </div>
-            </div>
-        </div>        
-    </div>
-</section>
-
+<app-cryptocompare></app-cryptocompare>
+<app-features></app-features>
+<app-counter></app-counter>
+<app-mobileapps></app-mobileapps>
+<app-newsletter></app-newsletter>
 <app-footer></app-footer>
