--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -1,28 +1,25 @@
 <div class="hero">
     <div class="container">
-        <div class="columns is-mobile">
-            <div class="column is-full-mobile is-half-desktop is-horizontal-center-mobile">
-                <div style="padding-top: 150px; padding-bottom: 50px;">
+        <div class="columns is-mobile is-multiline">
+            <div class="column is-full-mobile is-three-fifths-tablet is-half-desktop is-horizontal-center-mobile">             
+                <div id="subscriberform">
                     <h1 class="heading">At vero eos et ac
                         cusamus et iusto </h1>
-                    <p class="paragraph">
+                    <p class="paragraph mb-5">
                         Ut perspiciatis unde omnis iste natus error sit<br/> voluptatem accusantium doloremque.                    
-                    </p>
-                    <div class="is-horizontal-center-mobile">
-                        <div id="subscriberform">
-                            <div class="columns is-mobile">
-                                <div class="column is-two-thirds">
-                                    <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
-                                </div>
-                                <div class="column">
-                                    <button class="subscriber-btn">Get Started</button>
-                                </div>
-                            </div>
+                    </p>                            
+                    <div class="columns is-multiline is-mobile">
+                        <div class="column is-full-mobile is-two-thirds-tablet">
+                            <input type="text" placeholder="enter your email..." class="subscriber-textfield"/>
+                        </div>
+                        <div class="column is-full-mobile">
+                            <button class="subscriber-btn">Get Started</button>
                         </div>
                     </div>
                 </div>
+                
             </div>
-            <div class="column">
+            <div class="column is-mobile">
                 <img src="assets/img/polygen.png" class="image"/>
             </div>
           </div>        
