--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,3 +1,9 @@
 @import "_variables";
 @import "_animate";
 @import "_bulma";
+
+h1, h2, h3, h4 {
+    font-family: Touche;
+    font-style: normal;
+    font-weight: bold;
+}
