mobile design improve

--- a/src/app/shared/components/cryptocompare/cryptocompare.component.html
+++ b/src/app/shared/components/cryptocompare/cryptocompare.component.html
@@ -10,13 +10,13 @@
             <i class="fas fa-arrow-right"></i>
           </span></a></p>        
 
-        <div class="columns px-5 is-mobile mt-5 is-multiline is-horizontal-center-mobile">
-            <div class="column is-full-mobile">
-                <div class="columns is-gapless shadow" >
-                    <div class="column is-two-fifths">
+        <div class="columns px-5 is-mobile mt-5 is-multiline">
+            <div class="column">
+                <div class="columns is-mobile is-gapless shadow">
+                    <div class="column is-two-fifth">
                         <img src="assets/img/bitcoin-icon.png" height="103" width="103">
                     </div>
-                   <div class="column ">
+                   <div class="column">
                        <div class="mt-5 has-text-white	">
                             <p>Bitcoin</p>
                             <p class="is-size-5	 has-text-weight-bold">$53.863,9</p>
@@ -28,12 +28,12 @@
                 </div>                
             </div>
             <div class="column is-full-mobile">
-                <div class="columns is-gapless shadow">
+                <div class="columns is-mobile is-gapless shadow">
                     <div class="column is-two-fifths">
                         <img src="assets/img/eth-icon.png"  height="103" width="103">
                     </div>
                    <div class="column">
-                       <div class="mt-5 has-text-white	">
+                       <div class="mt-5 has-text-white">
                             <p>Bitcoint</p>
                             <p class="is-size-5	 has-text-weight-bold">$53.863,9</p>
                        </div>
@@ -44,8 +44,8 @@
                 </div> 
             </div>
             <div class="column">
-                <div class="columns is-gapless shadow">
-                    <div class="column is-two-fifths">
+                <div class="columns is-mobile is-gapless shadow">
+                    <div class="column is-two-fifth">
                         <img src="assets/img/bitcoint.png" height="103" width="103">
                     </div>
                    <div class="column">
