--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
-        <div class="columns is-mobile">
-            <div class="column is-two-fifths">
+        <div class="columns is-multiline is-mobile">
+            <div class="column is-full-mobile is-two-fifths-desktop is-horizontal-center-mobile">
                 <img src="assets/img/logo.png" class="image"/>
                 <p>4517 Sidney Ave. Blacktown, Sidney 39495</p>
                 <p class="mt-2">
@@ -25,7 +25,7 @@
             </div>
             <div class="column">     
                 <div class="columns is-mobile">
-                    <div class="column">                        
+                    <div class="column is-full-mobile">                        
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Company</h3>
                             <ul>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="column is-full-mobile">
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Individual</h3>
                             <ul>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="column is-half-mobile">
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Supports</h3>
                             <ul>
@@ -69,8 +69,8 @@
                     </div>         
                 </div> 
 
-                <div class="columns is-full">
-                    <div class="column">                        
+                <div class="columns">
+                    <div class="column is-half-mobile">                        
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Learn</h3>
                             <ul>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="column is-half-mobile">
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Business</h3>
                             <ul>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
 
-                    <div class="column">
+                    <div class="column is-half-mobile">
                         <div class="widget">
                             <h3 style="text-decoration: underline;">Developers</h3>
                             <ul>
