--- a/src/app/shared/components/hero/hero.component.html
+++ b/src/app/shared/components/hero/hero.component.html
@@ -1,7 +1,8 @@
 <div class="hero">
   <div class="container">
     <div class="columns is-mobile is-multiline">
-      <div class="column is-full-mobile is-three-fifths-tablet is-half-desktop is-horizontal-center-mobile">
+      <div class="column leftside is-full-mobile is-three-fifths-tablet is-half-desktop is-horizontal-center-mobile">
+        <img src="assets/img/hand-phone.png" class="image is-flex-mobile" />
         <div id="subscriberform">
           <h1 class="heading">Send, receive, and invest in crypto</h1>
           <p class="paragraph mb-5">
@@ -23,7 +24,7 @@
         </div>
       </div>
       <div class="column">
-        <img src="assets/img/hand-phone.png" class="image" />
+        <img src="assets/img/hand-phone.png" class="image is-hidden-mobile" />
       </div>
     </div>
   </div>
