--- a/src/app/shared/components/mobileapps/mobileapps.component.html
+++ b/src/app/shared/components/mobileapps/mobileapps.component.html
@@ -1,13 +1,13 @@
-<section>
+<section class="mt-5">
     <div class="container">
         <div class="columns is-mobile is-multiline is-centered">
             <div class="column is-full-mobile  is-horizontal-center-mobile">
                 <div>
                     <div class="seperator"></div>
-                    <h2 class="is-size-4 has-text-white mt-3">Get moon app on your<br/> mobile phone now</h2>
-                    <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem<br/> accusantium doloremque</p>
+                    <h2 class="is-size-4 has-text-white mt-3">Get moon app on your mobile phone now</h2>
+                    <p>Sed ut perspiciatis unde omnis<br/> iste natus error sit voluptatem accusantium doloremque</p>
                 </div>
-                <div class="columns mt-5  is-horizontal-center-mobile">
+                <div class="columns mt-5 is-mobile is-horizontal-center-mobile">
                     <div class="column">
                         <img src="assets/img/Google-Play-Badge-US.png" class="image"/>
                     </div>
@@ -16,9 +16,7 @@
                     </div>
                 </div>
             </div>
-            <div class="column is-full-mobile is-two-thirds-desktop
-
-            ">
+            <div class="column is-full-mobile is-two-thirds-desktop is-horizontal-center-mobile">
                 <img src="assets/img/GraphicDesktop.png" class="image"/>
             </div>
         </div>
