--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -28,3 +28,20 @@ footer .widget ul li a:hover {
     text-align: center;
     margin-top: 100px;
 }
+
+@media only screen and (max-width: 768px) { 
+
+    .container { 
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .is-horizontal-center-mobile { 
+        text-align: center;
+    }
+
+    .is-horizontal-center-mobile img {
+        margin: 0 auto;
+        // width: 70%;
+    }
+}
