--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,32 +1,26 @@
 <header>
-    <nav class="navbar container" style="background-color: inherit !important;" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="https://bulma.io">
-            <div class="logo">
-                <img src="assets/img/logo.png" style="max-height: 3rem;"/>
-            </div>
-            
-          </a>
-      
-          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-      
-        <div id="navbarBasicExample" class="navbar-menu">
-          <div class="navbar-start"></div>
-      
-          <div class="navbar-end">
-            <div class="navbar-item">
-                <a class="navbar-item" href="#">Home</a>
-                <a class="navbar-item" href="#">About</a>
-                <a class="navbar-item" href="#">Features</a>
-                <a class="navbar-item" href="#">Blog</a>
-                <a class="navbar-item" href="#">Contact</a>
-            </div>
+  <nav class="container" role="navigation" aria-label="main navigation">
+      <div class="columns is-mobile">        
+        <div class="column is-full-mobile">
+          <div class="moon-navbar-burger">
+            <img src="assets/img/menu-burger.png" alt="toggle" class="image">
+          </div>
+          
+          <div class="logo">
+            <img src="assets/img/logo.png" style="max-height: 3rem; margin: 0 auto!important;"/>
           </div>
         </div>
-      </nav>    
+        <div class="column is-three-quarters-tablet">
+          <div class="navbar-end">
+            <div class="nav-menu-items">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Features</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </div>
+          </div>          
+        </div>
+      </div>
+    </nav>    
 </header>
