--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,7 +1,13 @@
 header nav {
     padding-top: 20px;
     padding-bottom: 20px;
-    .navbar-item {
+    .nav-menu-items {
+      float: right;
+      margin-right: 25px;
+      margin-top: 10px;
+    }
+    .nav-menu-items a {
+      margin-left: 25px;
       color: #728495;
       background: transparent;
       &:hover {
@@ -9,3 +15,40 @@ header nav {
       }
     }
 }
+
+.moon-navbar-burger {
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .moon-navbar-burger {
+    display: block;
+  }
+
+  .navbar-brand { 
+    display: inline-block; 
+    width: 100%;
+  }
+  
+
+  // .navbar-burger {
+  //   float: left;
+  //   position: absolute;
+  //   top: 35px;
+  //   left: 25px;
+  // }
+
+  .is-mobile .logo {
+    margin: 0 auto;
+    max-width: 200px!important;
+  }
+
+  .logo img {
+    margin: 0 auto!important;
+  }
+}
+
