--- a/src/app/shared/components/hero/hero.component.scss
+++ b/src/app/shared/components/hero/hero.component.scss
@@ -1,3 +1,7 @@
+.leftside img {
+    display: none;
+}
+
 .hero .heading {
     font-style: normal;
     font-weight: bold;
@@ -18,7 +22,7 @@
 }
 
 #subscriberform { 
-    padding-top: 150px; padding-bottom: 50px;    
+    padding-top: 50px; padding-bottom: 50px;    
     max-width: 500px;
     margin-top: 30px;
 }
@@ -60,7 +64,19 @@
   ##Screen = B/w 481px to 767px
 */
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
+    #subscriberform .subscriber-textfield  {
+        width: 90%;
+    }
+
+    .hero .heading {
+        font-style: normal;
+        font-weight: bold;
+        font-size: 40px;
+        color: #FFFFFF;
+        line-height: 40px;
+        text-transform: capitalize;
+    }
 
     .is-horizontal-center-mobile img {
         margin: 0 auto;
